# codeforces

./: A266.h  A910.h  B910.h  Bit++.h  CMakeLists.txt  Domino_piling.h  Duff and Meat.h  Football.h  Helpful_Maths.h  M_N_array.h  MaxSubArray.h  Misha_Grisha_and_Underground.h  Next_Permutation.h  Next_round.h  Petya_and_Exam.h  Petya_and_Strings.h  Random_Array.h  Sasha_and_Sticks.h  Strange_Radiation.h  String_Task.h  Taxi.h  Team.h  TheatreSquare.h  Tram.h  Watermelon.h  Way_Too_Long_Words.h  dp_money.h  main.cpp  road_kou.h  test.h  test_io.h  test_work.h  xiaoxin.h  yuanqiao.h  zigzag_conversion.h
algorithm_introduction/1/: 算法概念
leetcode/: list_add.h  longest_palindrome.h  longest_substr_disrepeat.h
sort/: bubble.h
